# B-Map-Backend

./: .gitignore  .vercelignore  Dockerfile  README.md  api_documentation.md  create_tables.py  deploy.ps1  docker-compose.yaml  docker-compose.yml  env.example  go.mod  go.sum  gunicorn.conf.py  openapi.json  pyproject.toml  requirements.txt  run_migration.ps1  vercel.json
.cursor/: mcp.json
.github/workflows/: ci.yml  deploy.yml
api/: index.go  index.py
app/: main.py
app/core/: cache.py  config.py  database.py  logging_config.py  security.py  websocket.py
app/db/: models.py  session.py
app/schemas/: incident.py  pin.py  place.py  review.py  timeline.py  user.py  user_list.py
app/services/: ai_voice_service.py  auth_service.py  cab_service.py  car_sync_service.py  email_service.py  environment_service.py  firebase_service.py  gov_feed_service.py  incident_service.py  lifestyle_service.py  maps_service.py  navigation_service.py  offline_service.py  otp_service.py  pin_service.py  place_service.py  review_service.py  shortcut_service.py  (+4 more)
dataconnect/: dataconnect.yaml
docs/: docs.go  swagger.json  swagger.yaml
migrations/: env.py
scripts/: ingest_road_network.py
supabase/: config.toml
tests/: conftest.py  test_advanced_engines.py  test_advanced_features.py  test_advanced_safety_features.py  test_auth.py  test_core_engines.py  test_email_auth.py  test_environment.py  test_lists.py  test_maps.py  test_navigation_extended.py  test_offline.py  test_places_extended.py  test_reviews.py  test_timeline.py  test_twilio_auth.py  test_websocket.py
(+146 files in other folders)
