[project]
name = "b-map-backend"
version = "0.1.0"
description = "B-Map Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]==0.111.0",
    "uvicorn[standard]==0.29.0",
    "motor>=3.4.0",
    "pymongo>=4.6.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",
    "cryptography==42.0.5",
    "python-dotenv==1.0.1",
    "redis[hiredis]==5.0.4",
    "google-auth==2.29.0",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "requests==2.32.3",
    "firebase-admin>=6.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
]
